Minor code cleanup
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>